Parallelized hhm map creation

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -840,7 +840,8 @@
     "            if \"sum_weight\" in hypernymy_dict[hypernym]:\n",
     "                hypernymy_dict[hypernym][\"sum_weight\"] += weights[f\"{level}_{match_str}\"]\n",
     "            else:\n",
-    "                hypernymy_dict[hypernym][\"sum_weight\"] = weights[f\"{level}_{match_str}\"]"
+    "                hypernymy_dict[hypernym][\"sum_weight\"] = weights[f\"{level}_{match_str}\"]\n",
+    "    return hypernymy_dict"
    ]
   },
   {
@@ -870,21 +871,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|▏         | 17666/1043372 [14:49:33<1320:50:50,  4.64s/it]"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Generate HHM flag\n",
-    "if generate_hypernymy_flag:\n",
+    "def get_hhm_map_for_batch(batch_df, proc_name):\n",
     "    all_hypernyms = []\n",
     "    all_hhm_map = []\n",
     "    all_hyponyms = []\n",
@@ -893,13 +883,13 @@
     "    all_hypernyms_from_corpus = []\n",
     "    all_hyponyms_from_corpus = []\n",
     "    all_meronyms_from_corpus = []\n",
-    "    num_words = len(sense_group_dataframe)\n",
-    "    for _, row in tqdm(sense_group_dataframe[[\"sense_group_name\", \"sense_group_num\", \"related_senses\"]].iterrows(), total=num_words):\n",
+    "    \n",
+    "    for _, row in tqdm(batch_df[[\"sense_group_name\", \"sense_group_num\", \"related_senses\"]].iterrows(), total=num_words):\n",
     "        word, idx, r_senses = row\n",
     "\n",
     "        hypernymy_dict = defaultdict(lambda: defaultdict(dict))\n",
     "        \n",
-    "        generate_hypernymy(word, idx, hypernymy_dict, level=\"direct\")\n",
+    "        hypernymy_dict = generate_hypernymy(word, idx, hypernymy_dict, level=\"direct\")\n",
     "        if type(r_senses) == str:\n",
     "            r_senses_list = ast.literal_eval(r_senses)\n",
     "        else:\n",
@@ -908,7 +898,7 @@
     "            related_word, related_idx = str(w).split(\"#\")\n",
     "            if related_word in corpus_data:\n",
     "                if len(related_word.strip())>0:\n",
-    "                    generate_hypernymy(related_word, related_idx, hypernymy_dict)\n",
+    "                    hypernymy_dict = generate_hypernymy(related_word, related_idx, hypernymy_dict)\n",
     "        hypernyms = []\n",
     "        hyponyms = []\n",
     "        meronyms = []   \n",
@@ -939,7 +929,127 @@
     "        all_hypernyms_from_corpus.append(hypernyms_from_corpus)\n",
     "        all_hyponyms_from_corpus.append(hyponyms_from_corpus)\n",
     "        all_meronyms_from_corpus.append(meronyms_from_corpus)\n",
-    "        all_hhm_map.append(hypernymy_dict_sorted)"
+    "        all_hhm_map.append(hypernymy_dict_sorted)\n",
+    "        \n",
+    "        return_data = {\n",
+    "            proc_name: {\n",
+    "                \"all_hypernyms\":all_hypernyms,\n",
+    "                \"all_hyponyms\":all_hyponyms,\n",
+    "                \"all_meronyms\":all_meronyms,\n",
+    "                \"all_hypernyms_from_corpus\":all_hypernyms_from_corpus,\n",
+    "                \"all_hyponyms_from_corpus\":all_hyponyms_from_corpus,\n",
+    "                \"all_meronyms_from_corpus\":all_meronyms_from_corpus,\n",
+    "                \"all_hhm_map\":all_hhm_map,\n",
+    "        }\n",
+    "        }\n",
+    "        return return_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def worker_func2(p_name, tasks, results):\n",
+    "    while True:\n",
+    "        indices = tasks.get()\n",
+    "        if indices == None:\n",
+    "            print('[%s] evaluation routine quits' % p_name)\n",
+    "\n",
+    "            # Indicate finished\n",
+    "            results.put(\"Done\")\n",
+    "            break\n",
+    "        else:\n",
+    "            # Compute result and mimic a long-running task\n",
+    "            batch_df = sense_group_dataframe.iloc[indices[0]:indices[1],:]\n",
+    "            batch_map = get_hhm_map_for_batch(batch_df, p_name)\n",
+    "\n",
+    "            # Output which process received the value\n",
+    "            # and the calculation result\n",
+    "            print(f\"{p_name} recieved computation of batch {indices}\")\n",
+    "\n",
+    "            # Add result to the queue\n",
+    "            results.put(batch_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2%|▏         | 17666/1043372 [14:49:33<1320:50:50,  4.64s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate HHM flag\n",
+    "if generate_hypernymy_flag:\n",
+    "     manager = multiprocessing.Manager()\n",
+    "    tasks = manager.Queue()\n",
+    "    results = manager.Queue()\n",
+    "    num_processes = os.cpu_count()\n",
+    "    pool = multiprocessing.Pool(processes=num_processes)\n",
+    "    processes = []\n",
+    "    output_map = []\n",
+    "    num_words = len(sense_group_dataframe)\n",
+    "    batch_size = int(num_words/num_processes)+1\n",
+    "    \n",
+    "    print(\"Generate HHM map\")\n",
+    "    for i in range(num_processes):\n",
+    "        proc_name = f\"HHM_P_{i}\"\n",
+    "        start_idx = i*batch_size\n",
+    "        end_idx = min(num_words, batch_size*(i+1))\n",
+    "        tasks.put([start_idx, end_idx])\n",
+    "        new_process = multiprocessing.Process(target=worker_func2, args=(proc_name,tasks,results))\n",
+    "        processes.append(new_process)\n",
+    "        new_process.start()\n",
+    "        \n",
+    "    for i in range(num_processes):\n",
+    "        tasks.put(None)\n",
+    "    \n",
+    "    num_finished_processes = 0\n",
+    "    while True: \n",
+    "        new_result = results.get()\n",
+    "        if new_result == \"Done\":\n",
+    "            # Process has finished\n",
+    "            num_finished_processes += 1\n",
+    "            if num_finished_processes == num_processes:\n",
+    "                break\n",
+    "        else:\n",
+    "            output_map.append(new_result)\n",
+    "            \n",
+    "    \n",
+    "    # Generate list data\n",
+    "    print(\"All processes complete. Append all data now\")\n",
+    "    all_hypernyms = []\n",
+    "    all_hhm_map = []\n",
+    "    all_hyponyms = []\n",
+    "    all_meronyms = []\n",
+    "\n",
+    "    all_hypernyms_from_corpus = []\n",
+    "    all_hyponyms_from_corpus = []\n",
+    "    all_meronyms_from_corpus = []\n",
+    "    \n",
+    "    for i in range(num_processes):\n",
+    "        p_name = f\"HHM_P_{i}\"\n",
+    "        for batch_map in output_map:\n",
+    "            if p_name in batch_map:\n",
+    "                all_hypernyms.extend(batch_map[p_name][\"all_hypernyms\"])\n",
+    "                all_hhm_map.extend(batch_map[p_name][\"all_hhm_map\"])\n",
+    "                all_hyponyms.extend(batch_map[p_name][\"all_hyponyms\"])\n",
+    "                all_meronyms.extend(batch_map[p_name][\"all_meronyms\"])\n",
+    "\n",
+    "                all_hypernyms_from_corpus.extend(batch_map[p_name][\"all_hypernyms_from_corpus\"])\n",
+    "                all_hyponyms_from_corpus.extend(batch_map[p_name][\"all_hyponyms_from_corpus\"])\n",
+    "                all_meronyms_from_corpus.extend(batch_map[p_name][\"all_meronyms_from_corpus\"])\n",
+    "    "
    ]
   },
   {
